Cleanup from node creation code